--- a/SpellChecker/pom.xml
+++ b/SpellChecker/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>groupId</groupId>
-  <artifactId>DavidsDeepLChessLabJ</artifactId>
+  <artifactId>SpellChecker</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
